<resources>
    <string name="app_name">MyTODO</string>
    <string name="todotext">TodoText</string>
    <string name="expiredate">expireDate</string>
    <string name="donedate">doneDate</string>
    <string name="btn_add_todo_text">Добавить запись</string>
    <string name="ok_button">Ok</string>
    <string name="add_todo_dialog_title">Добавить новую запись</string>
    <string name="add_edit_todo_dialog_title">Редактировать запись</string>
    <string name="cancel_button">Cancel</string>
    <string name="custom_dialog_tv_date">Дата выполнения:</string>
    <string name="custom_dialog_todo_hint">Что планируем..</string>
    <string name="custom_dialog_btn_set_date">Установить</string>
    <string name="menu_item_delete_all_records">Удалить все записи</string>
    <string name="toast_all_records_deleted">Вся информация стёрта!</string>
</resources>
