<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_todo"
        android:layout_gravity="center_horizontal"
        android:hint="@string/custom_dialog_todo_hint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/custom_dialog_tv_date"
        android:id="@+id/tv_date_set_title" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_date"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.94" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_dialog_btn_set_date"
            android:onClick="datePicker"
            android:id="@+id/btn_set_date" />
    </LinearLayout>

</LinearLayout>
