<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/clipboard_text"
        android:id="@+id/imageView" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/todotext"
                android:id="@+id/textOfTodo"
                android:layout_gravity="left|top" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/expiredate"
                android:id="@+id/expireDate"
                android:layout_gravity="left|bottom" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/donedate"
                android:id="@+id/doneDate"
                android:layout_gravity="bottom|center_horizontal|right" />
    </FrameLayout>

</LinearLayout>